# math-rs

./: .gitignore  .gitpod.yml  README.md
bubblemath/: Cargo.toml  README.md
bubblemath/src/: lib.rs  linear_recurrence.rs  number_theory.rs
